//
//  AccessibilityIdentifiers.swift
//  MarsRovers!
//
//  Created by Mike Eggar on 1/21/19.
//  Copyright © 2019 Mike Eggar. All rights reserved.
//

import Foundation

enum AccessibilityIdentifier: String {
    case roverSelectorSelectedDate = "roverSelectorSelectedDate"
    case roverSelectorIncrementDate = "roverSelectorIncrementDate"
    case roverSelectorDecrementDate = "roverSelectorDecrementDate"
    case roverSelectorTable = "roverSelectorTable"
    case roverSelectorMinSliderLabel = "roverSelectorMinSliderLabel"
    case roverSelectorMaxSliderLabel = "roverSelectorMaxSliderLabel"
    case roverSelectorSlider = "roverSelectorSlider"
    case RoverSelectorShowImagesButton = "RoverSelectorShowImagesButton"
    case RoverSelectorFavoritesButton = "RoverSelectorFavoritesButton"
    
    case FavoritesSlideShowView = "FavoritesSlideShowView"
}

