...
        let layout = UICollectionViewFlowLayout()
        layout.scrollDirection = .vertical
        layout.minimumInteritemSpacing = 10
        
        self.init(collectionViewLayout: layout)
        
        title = "Favorite Images"
    }
    
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented for FavoriteImages_ViewController")
    }
}
...
