...
        
        [stackTop,
         stackBottom].forEach{ stack.addArrangedSubview($0) }
        
        view.addSubview(stack)
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Zoom",
                                                            style: .done,
                                                            target: self,
                                                            action: #selector(zoomPhoto))
        
        stack.axis = UIDevice.current.orientation.isLandscape ? .horizontal : .vertical
        
...
