...
    
    var roverPhoto_datasource: RoverPhoto_DataSource?
    var photos:[FavoriteRoverImage] = [] {
        didSet {
            navigationItem.rightBarButtonItem = photos.isEmpty
                                                ? nil
                                                : UIBarButtonItem(title: "SlideShow",
                                                                    style: .plain,
                                                                    target: self,
                                                                    action: #selector(startSlideShow))
        }
    }
    
...
                                           left: 0.0,
                                           bottom: 10.0,
                                           right: 0.0)
        
        self.init(collectionViewLayout: layout)
        
        title = "Favorite Images"
    }
    
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented for FavoriteImages_ViewController")
    }
}
...
