...
    
    // MARK: - UIView
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Mars Rovers"
        
        setupUI()
        setupConstraints()
    }
    
    private func setupUI() {
...
